replace a bunch of usages of Collections with newer, appropriate static methods (List#of/copyOf, Map#of/copyOf), optimize imports