@@ -5,6 +5,7 @@ import org.phantazm.core.game.scene.Scene;
 import org.phantazm.core.game.scene.SceneProvider;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -21,8 +22,7 @@ public class LobbyRouterTest {
         Scene<LobbyRouteRequest> router = new LobbyRouter(sceneProviders);
 
         router.setJoinable(false);
-        LobbyRouteRequest request =
-                new LobbyRouteRequest(lobbyName, new BasicLobbyJoinRequest(Collections.emptyList()));
+        LobbyRouteRequest request = new LobbyRouteRequest(lobbyName, new BasicLobbyJoinRequest(List.of()));
 
         assertFalse(router.join(request).success());
     }
@@ -36,8 +36,7 @@ public class LobbyRouterTest {
         Scene<LobbyRouteRequest> router = new LobbyRouter(sceneProviders);
 
         router.forceShutdown();
-        LobbyRouteRequest request =
-                new LobbyRouteRequest(lobbyName, new BasicLobbyJoinRequest(Collections.emptyList()));
+        LobbyRouteRequest request = new LobbyRouteRequest(lobbyName, new BasicLobbyJoinRequest(List.of()));
 
         assertFalse(router.join(request).success());
     }
@@ -50,8 +49,7 @@ public class LobbyRouterTest {
                 Collections.singletonMap(lobbyName, (SceneProvider<Lobby, LobbyJoinRequest>)mock(SceneProvider.class));
         Scene<LobbyRouteRequest> router = new LobbyRouter(sceneProviders);
 
-        LobbyRouteRequest request =
-                new LobbyRouteRequest("notMain", new BasicLobbyJoinRequest(Collections.emptyList()));
+        LobbyRouteRequest request = new LobbyRouteRequest("notMain", new BasicLobbyJoinRequest(List.of()));
 
         assertFalse(router.join(request).success());
     }
