@@ -6,7 +6,6 @@ import net.kyori.adventure.text.Component;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -101,9 +100,9 @@ public record MapSettingsInfo(int mapDataVersion,
      *               otherwise specified
      */
     public MapSettingsInfo(@NotNull Key id, @NotNull Vec3I origin) {
-        this(MAP_DATA_VERSION, id, Collections.emptyList(), origin, 47, -1, Vec3I.ORIGIN, 0, 0,
-                Component.text(id.value()), "{id:\"stone\",Count:1,tag:{Name:\"" + id.value() + "\"}}",
-                new ArrayList<>(0), Component.text(id.value()), Vec3I.ORIGIN, 15, 0, 4, 1, 0, 20, 3, 1, 20, 500, 2,
-                false, false, 30, 5, new ArrayList<>(0), new ArrayList<>(0));
+        this(MAP_DATA_VERSION, id, List.of(), origin, 47, -1, Vec3I.ORIGIN, 0, 0, Component.text(id.value()),
+                "{id:\"stone\",Count:1,tag:{Name:\"" + id.value() + "\"}}", new ArrayList<>(0),
+                Component.text(id.value()), Vec3I.ORIGIN, 15, 0, 4, 1, 0, 20, 3, 1, 20, 500, 2, false, false, 30, 5,
+                new ArrayList<>(0), new ArrayList<>(0));
     }
 }
