@@ -5,6 +5,7 @@ import net.minestom.server.instance.block.Block;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -13,8 +14,7 @@ public class WallshotBlockIterationTest {
 
     @Test
     public void testAirDoesNotEndIteration() {
-        BlockIteration blockIteration =
-                new WallshotBlockIteration(new WallshotBlockIteration.Data(Collections.emptyList()));
+        BlockIteration blockIteration = new WallshotBlockIteration(new WallshotBlockIteration.Data(List.of()));
         BlockIteration.Context context = blockIteration.createContext();
 
         assertFalse(context.acceptRaytracedBlock(Vec.ZERO, Block.AIR));
@@ -22,8 +22,7 @@ public class WallshotBlockIterationTest {
 
     @Test
     public void testStoneIsInitiallyValidEndpoint() {
-        BlockIteration blockIteration =
-                new WallshotBlockIteration(new WallshotBlockIteration.Data(Collections.emptyList()));
+        BlockIteration blockIteration = new WallshotBlockIteration(new WallshotBlockIteration.Data(List.of()));
         BlockIteration.Context context = blockIteration.createContext();
 
         assertTrue(context.isValidEndpoint(Vec.ZERO, Block.STONE));
